# UliEconomics

./: README.md  pyproject.toml  tox.ini
UliEconomics/: CombinedCost.py  ContinousCost.py  Cost.py  CostIncreaseWrapper.py  Interval.py  OneTimeCost.py  RepeatingOneTimeCost.py
UliEconomics/VariableCostFunctions/: LinearTimeVariableCostFunction.py  TimeVariableCostFunction.py
tests/: test_ContinousCost.py  test_OneTimeCost.py
